@@ -1,3 +1,8 @@
+Sun Jun  6 22:37:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* string.c (rb_str_buf_cat_escaped_char): get rid of buffer
+	  overflow on platforms int is bigger than 32bit, and warnings.
+
 Sun Jun  6 10:44:34 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* array.c (rb_ary_product): need to set the length in order to get
@@ -32,7 +37,7 @@ Sat Jun  5 23:15:42 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 	* re.c (rb_reg_expr_str): use rb_str_buf_cat_escaped_char
 	  when resenc is given: for Regexp#inspect or error message.
 
-	  * re.c (rb_reg_desc): add 'n' for ENCODING_NONE.
+	* re.c (rb_reg_desc): add 'n' for ENCODING_NONE.
 
 Sat Jun  5 23:15:42 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
